# bcf-reader

./: .rustfmt.toml  Cargo.toml  Readme.md  sim_genotype.py
.github/workflows/: rust.yml
src/: bcf2.rs  lib.rs  main.rs
testdata/: test.bcf  test2.bcf  test3.bcf  test3.bcf.csi  test4.bcf
