[package]
name = "bcf_reader"
version = "0.1.0"
edition = "2021"
description = "a small, lightweight, pure-Rust library to allow efficient, cross-platform access to genotype data in BCF files"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
flate2 = "1.0.28"
