[package]
name = "bcf_reader"
version = "0.3.1"
edition = "2021"
description = "a small, lightweight, pure-Rust library to allow efficient, cross-platform access to genotype data in BCF files"
license = "MIT"
readme = "Readme.md"
repository = "https://github.com/bguo068/bcf-reader.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
flate2 = "1.0.28"
rayon = "1.10.0"

[features]
zlib = ["flate2/zlib"]
zlib-ng-compat = ["flate2/zlib-ng-compat"]
